--- a/instituicao/turmas/vizualizacao/index.html
+++ b/instituicao/turmas/vizualizacao/index.html
@@ -188,10 +188,8 @@
             </div>
 
             <div class="buttons">
-
-
                 <div class="col-md-4">
-                    <button class="terceiro_botao" onclick="" type="button">ADICIONAR MEMBROS</button>
+                    <button class="segundo_botao" type="button" onclick="exitModal()">CANCELAR</button>
                 </div>
 
                 <div class="col-md-4">
@@ -199,12 +197,12 @@
                 </div>
 
                 <div class="col-md-4">
-                    <button class="segundo_botao" type="button" onclick="exitModal()">CANCELAR</button>
+                    <button class="terceiro_botao" onclick="" type="button">ADICIONAR MEMBROS À TURMA</button>
                 </div>
+
             </div>
         </form>
     </div>
-
 
     <div class="container mt-5 container modal modal-turma">
         <h1>NOME DA TURMA</h1>
@@ -237,12 +235,57 @@
             </div>
 
             <div class="buttons">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <button class="segundo_botao" type="button" onclick="exitModalTurma()">SAIR</button>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-md-4">
+                    <button class="primeiro_botao" type="button" onclick="showModalEditar()">EDITAR</button>
+                </div>
+
+                <div class="col-md-4">
                     <button class="terceiro_botao" onclick="showModalMembros()" type="button">MEMBROS DA TURMA</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="container mt-5 container modal modal-editar">
+        <h1>NOME DA TURMA</h1>
+        <form class="row g-7">
+
+            <div class="col-md-12 lab-inp">
+                <label for="turma" class="form-label">Turma</label>
+                <input type="text" class="form-control turma" placeholder="unicuritiba@gmail.com">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="numero-estudantes" class="form-label">Número de estudantes</label>
+                <input type="email" class="form-control numero-estudantes" placeholder="Universidade De Curitiba ">
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="curso-inp" class="form-label">Curso</label>
+                <input type="text" class="form-control curso-inp" placeholder="42.591.538/0001-68" >
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="data-inicio" class="form-label">Data de inicio das aulas</label>
+                <input type="date" class="form-control data-inicio" placeholder="42.591.538/0001-68" >
+            </div>
+
+            <div class="col-md-6 lab-inp">
+                <label for="data-termino" class="form-label">Data de termino das aulas</label>
+                <input type="date" class="form-control data-termino" placeholder="42.591.538/0001-68" >
+            </div>
+
+            <div class="buttons">
+                <div class="col-md-3">
+                    <button class="segundo_botao" type="button" onclick="showModalTurma()">CANCELAR</button>
+                </div>
+
+                <div class="col-md-3">
+                    <button class="terceiro_botao" onclick="showModalTurma()" type="button">SALVAR</button>
                 </div>
             </div>
         </form>
