--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -72,7 +72,7 @@
 
     <div class="ccontainer modal modal-editar">
         <h1>EDITAR CURSO</h1>
-        <form onsubmit="editarCurso()" class="row g-7 icon">
+        <form class="row g-7 icon">
             <div class="lab-inp">
                 <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso:</label>
                 <input id="inputEditarNomeCurso" type="text" class="form-control senha-label" maxlength="255"
