Edição de Curso Finalizada

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -64,7 +64,7 @@
                     </button>
                 </div>
                 <div class="col-md-6">
-                    <button id="terceiro_botao" type="submit">CRIAR</button>
+                    <button type="submit">CRIAR</button>
                 </div>
             </div>
         </form>
@@ -72,7 +72,7 @@
 
     <div class="ccontainer modal modal-editar">
         <h1>EDITAR CURSO</h1>
-        <form class="row g-7 icon">
+        <div class="row g-7 icon">
             <div class="lab-inp">
                 <label for="senha-label" class="form-label">Insira o novo nome desejado para o curso:</label>
                 <input id="inputEditarNomeCurso" type="text" class="form-control senha-label" maxlength="255"
@@ -87,10 +87,10 @@
                     </button>
                 </div>
                 <div class="col-md-6">
-                    <button id="terceiro_botao" type="submit">SALVAR</button>
+                    <button id="terceiro_botao" type="button">SALVAR</button>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
 
     <div class="ccontainer modal modal-excluir">
