--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet" />
 
   <script type="text/javascript" src="../../../../jquery/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="../../../../jquery/jquery.mask.min.js"></script>
@@ -22,51 +23,51 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
-  <link rel="stylesheet" href="../../../componentes/header/styles_header.css">
+  <link rel="stylesheet" href="../../../componentes/header/styles_header.css" />
   <script src="./script.js" defer></script>
 
   <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
 <body>
-
   <header>
     <div class="primeira_parte">
-        <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas">
-        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+      <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+      <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
-    
+
     <a href="../../../index.html">
-        <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil">
+      <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
   </header>
-  
+
   <div class="container mt-5 container">
     <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
     <form onsubmit="editarInstituicao()" class="row g-3">
-
       <div class="col-md-12" id="icon">
         <label for="numero_do_cartao" class="form-label">Número do cartão</label>
-        <input id="input_numero_do_cartao" type="text" class="form-control numero_do_cartao" minlength="9" maxlength="19" onkeypress="isInputNumber(event)" required>
-        <i class="fa fa-edit" style="font-size:24px"></i>
+        <input id="input_numero_do_cartao" type="text" class="form-control numero_do_cartao" minlength="9"
+          maxlength="19" onkeypress="isInputNumber(event)" required />
+        <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-12" id="icon">
         <label for="nome_no_cartao" class="form-label">Nome no cartão</label>
-        <input id="input_nome_do_cartao" type="text" class="form-control nome_no_cartao" maxlength="45" required>
-        <i class="fa fa-edit" style="font-size:24px"></i>
+        <input id="input_nome_do_cartao" type="text" class="form-control nome_no_cartao" maxlength="45" required />
+        <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="validade" class="form-label">Validade</label>
-        <input id="input_validade" type="text" class="form-control validade" required>
-        <i class="fa fa-edit" style="font-size:24px"></i>
+        <input id="input_validade" type="text" class="form-control validade" required />
+        <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="col-md-6" id="icon">
         <label for="cvv" class="form-label">CVV</label>
-        <input id="input_cvv" type="text" class="form-control cvv" minlength="3" maxlength="4" onkeypress="isInputNumber(event)" required> 
-        <i class="fa fa-edit" style="font-size:24px"></i>
+        <input id="input_cvv" type="text" class="form-control cvv" minlength="3" maxlength="4"
+          onkeypress="isInputNumber(event)" required />
+        <i class="fa fa-edit" style="font-size: 24px"></i>
       </div>
 
       <div class="buttons">
@@ -75,10 +76,9 @@
         </div>
 
         <div class="col-md-3">
-          <input id="segundo_botao" type="submit" value="SALVAR">
+          <input id="segundo_botao" type="submit" value="SALVAR" />
         </div>
       </div>
-
     </form>
   </div>
 </body>
