--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -104,9 +104,7 @@
                 </button>
             </div>
             <div class="col-md-12">
-                <button id="quarto_botao" onclick="exitModalExcluir()" type="submit">
-                    CONFIRMAR
-                </button>
+                <button id="quarto_botao_confirmar" type="submit">CONFIRMAR</button>
             </div>
         </div>
     </div>
