CRUD de turma quase finalizado

--- a/instituicao/turmas/index.html
+++ b/instituicao/turmas/index.html
@@ -261,13 +261,14 @@
                 </ul>
             </div>
         </div>
+
         <div class="buttons">
             <div class="col-md-3">
                 <button class="segundo_botao" type="button" onclick="showModal()">CANCELAR</button>
             </div>
 
             <div class="col-md-3">
-                <button class="terceiro_botao" onclick="showModal()" type="button">SALVAR</button>
+                <button class="terceiro_botao" type="button" onclick="showModal()">SALVAR</button>
             </div>
         </div>
     </div>
