--- a/instituicao/componentes/side_menu/side_menu.html
+++ b/instituicao/componentes/side_menu/side_menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles_side_menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Righteous&display=swap" rel="stylesheet">
@@ -13,6 +13,7 @@
 <body>
 
     <div class="side_menu">
+
         <img src="../../../home/images-global/logo-branca.svg" alt="logo" id="logo">
 
         <div class="links">
