Adicionando Funcionalidade de Exclusão

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -21,6 +21,7 @@
 <div class="bg"></div>
 
 <body>
+    <span id="testespan"></span>
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
